fix: editor background contrast

--- a/src/components/Editors/editors/HeadersEditor/HeadersEditor.module.scss
+++ b/src/components/Editors/editors/HeadersEditor/HeadersEditor.module.scss
@@ -1,7 +1,8 @@
 .headersEditor {
   height: 30vh;
   font-size: 16px;
-  background-color: #f5f5f5;
+  border: 1px solid;
+  background-color: #ffffff;
   font-family: 'Fira Code', monospace;
   border-radius: 10px;
   padding: 15px;
